--- a/Project3ProductionLtd/Project3ProductionLtd.csproj
+++ b/Project3ProductionLtd/Project3ProductionLtd.csproj
@@ -57,6 +57,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="MainMenuSælger.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -68,6 +72,9 @@
     <Compile Include="Controller.cs" />
     <Compile Include="MainMenuProduktionsplanlægger.xaml.cs">
       <DependentUpon>MainMenuProduktionsplanlægger.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="MainMenuSælger.xaml.cs">
+      <DependentUpon>MainMenuSælger.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
