--- a/Project3ProductionLtd/Project3ProductionLtd.csproj
+++ b/Project3ProductionLtd/Project3ProductionLtd.csproj
@@ -53,6 +53,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="BekræftOrdre.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="BekræftOrdreWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainMenuProduktionsarbejder.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -72,6 +80,12 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="BekræftOrdre.xaml.cs">
+      <DependentUpon>BekræftOrdre.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="BekræftOrdreWindow.xaml.cs">
+      <DependentUpon>BekræftOrdreWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controller.cs" />
     <Compile Include="MainMenuProduktionsarbejder.xaml.cs">
