--- a/Project3ProductionLtd/Project3ProductionLtd.csproj
+++ b/Project3ProductionLtd/Project3ProductionLtd.csproj
@@ -114,6 +114,7 @@
     </Compile>
     <Compile Include="Order.cs" />
     <Compile Include="Product.cs" />
+    <Compile Include="Produktionsarbejder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
