--- a/Project3ProductionLtd/Project3ProductionLtd.csproj
+++ b/Project3ProductionLtd/Project3ProductionLtd.csproj
@@ -104,6 +104,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="OpretOrdre.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MaskineVindue.xaml.cs">
@@ -111,6 +115,9 @@
     </Compile>
     <Compile Include="OpretArbejdsplan.xaml.cs">
       <DependentUpon>OpretArbejdsplan.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="OpretOrdre.xaml.cs">
+      <DependentUpon>OpretOrdre.xaml</DependentUpon>
     </Compile>
     <Compile Include="Order.cs" />
     <Compile Include="Product.cs" />
